test/runtime-integration-tests/TestPrograms/Syntax/Invalid/slice_unreachable.5th
main(): int { a: int[]; a = int[10]; a[1:3]; return 0; }
